--- a/package.json
+++ b/package.json
@@ -1,33 +1,38 @@
 {
+  "version": "2.0.0",
   "name": "retwedt.github.io",
-  "version": "1.0.0",
   "description": "Rex Twedt Medical Illustration",
-  "main": "gulpfile.js",
-  "dependencies": {},
-  "devDependencies": {
-    "express": "^4.13.3",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-deploy-git": "^0.5.3",
-    "gulp-livereload": "^3.8.1",
-    "gulp-newer": "^1.1.0",
-    "gulp-open": "^1.0.0",
-    "gulp-sass": "^2.1.1",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.1",
-    "merge-stream": "^1.0.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "author": "Rex Twedt III",
+  "license": "MIT",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/retwedt/retwedt.github.io.git"
   },
-  "author": "Rex Twedt",
-  "license": "MIT",
+  "homepage": "https://github.com/retwedt/retwedt.github.io#readme",
   "bugs": {
     "url": "https://github.com/retwedt/retwedt.github.io/issues"
   },
-  "homepage": "https://github.com/retwedt/retwedt.github.io#readme"
+  "scripts": {
+    "start": "webpack-dev-server --config webpack.config.js --mode=development",
+    "build:dev": "webpack --config webpack.config.js --mode=development",
+    "build": "webpack --config webpack.config.js --mode=production",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^2.1.1",
+    "html-webpack-plugin": "^3.2.0",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
+    "style-loader": "^0.23.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.6.0"
+  }
 }
