--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "@babel/preset-env": "^7.4.5",
     "babel-loader": "^8.0.6",
     "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "prettier": "^1.17.1",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
     "style-loader": "^0.23.1",
