--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
     "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-prettier": "^3.1.0",
+    "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.17.1",
     "pug": "^2.0.3",
