--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.0.0",
+  "version": "5.0.0",
   "name": "retwedt.github.io",
   "description": "Rex Twedt Medical Illustration",
   "author": "Rex Twedt III",
@@ -20,6 +20,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "raf": "^3.4.1"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-prettier": "^3.1.0",
     "file-loader": "^4.0.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.17.1",
     "pug": "^2.0.3",
