--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "lit-element": "^2.1.0",
     "raf": "^3.4.1"
   },
   "devDependencies": {
