--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
+    "react-scrollbars-custom": "^4.0.5",
     "react-transition-group": "^4.1.1"
   },
   "devDependencies": {
